ref: delivery: оптимизация delivery сервиса